--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.16.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.16.4",
     "gsap": "^3.12.5",
     "lucide-react": "^0.469.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
